--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -2,6 +2,7 @@ SRCS =  srcs/main.cpp \
 		srcs/BitcoinExchange.cpp
 
 OBJS = $(SRCS:.cpp=.o)
+DEPS = $(SRCS:.cpp=.d)
 
 INCLUDES = headers
 
@@ -10,7 +11,7 @@ NAME = btc
 FLAGS = -Wall -Wextra -Werror -std=c++98
 
 .cpp.o :
-	c++ $(FLAGS) -I $(INCLUDES) -c $< -o $@
+	c++ $(FLAGS) -I $(INCLUDES) -MMD -c $< -o $@
 
 all : $(NAME)
 
@@ -18,7 +19,7 @@ $(NAME) : $(OBJS)
 	c++ $(OBJS) -o $(NAME)
 
 clean :
-	rm -f $(OBJS)
+	rm -f $(OBJS) $(DEPS)
 
 fclean : clean
 	rm -f $(NAME)
@@ -26,3 +27,5 @@ fclean : clean
 re : fclean all
 
 .PHONY : all clean fclean re
+
+-include $(DEPS)
