--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -1,6 +1,7 @@
 SRCS =  srcs/main.cpp \
 
 OBJS = $(SRCS:.cpp=.o)
+DEPS = $(SRCS:.cpp=.d)
 
 INCLUDES = headers
 
@@ -9,7 +10,7 @@ NAME = PmergeMe
 FLAGS = -Wall -Wextra -Werror -std=c++98
 
 .cpp.o :
-	c++ $(FLAGS) -I $(INCLUDES) -c $< -o $@
+	c++ $(FLAGS) -I $(INCLUDES) -MMD -c $< -o $@
 
 all : $(NAME)
 
@@ -17,7 +18,7 @@ $(NAME) : $(OBJS)
 	c++ $(OBJS) -o $(NAME)
 
 clean :
-	rm -f $(OBJS)
+	rm -f $(OBJS) $(DEPS)
 
 fclean : clean
 	rm -f $(NAME)
@@ -25,3 +26,5 @@ fclean : clean
 re : fclean all
 
 .PHONY : all clean fclean re
+
+-include $(DEPS)
